--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 </head>
 <body class="body">
 
+<div id="page-top"></div>
 
 <header id="header" class="header">
     <div class="menu-container">
         <div class="menu">
             <a class="nav-link" href="#page-top">Home</a>
-            <a class="nav-link" href="#about-me">About Me</a>
-            <a class="nav-link" href="#demos">Demos</a>
+            <a class="nav-link" href="#landing-bottom">Demos</a>
             <a class="nav-link" href="#services">Services</a>
+            <a class="nav-link" href="#about-me">About Me</a>
             <a class="nav-link" href="#reviews">Reviews</a>
             <a class="nav-link" href="#contact">Contact</a>
         </div>
@@ -84,7 +85,7 @@
                 </div>
             </div>
 
-            <div class="bottom-services">
+            <div id="services" class="bottom-services">
                 <div class="services-container">
                     <h3>Services I offer...</h3>
                     <div class="services-section voice-styles">
@@ -200,7 +201,6 @@
         </div>
     </div>
 </section>
-
 
 <section id="reviews">
     <div class="reviews-container">
@@ -373,15 +373,12 @@
     </div>
 </section>
 
-
-
 <section id="logos">
     <div class="logos-container">
         <h3>Clients I have worked...</h3>
         <div class="logo-note-container">
-            <p class="note logo-note">Some clients you might know...
+            <p class="note logo-note">Some clients you might know...</p>
         </div>
-        </p>
         <div class="logos-block">
             <div class="logo"><img src="images/PNG/Boots.png" alt=""></div>
             <div class="logo"><img src="images/PNG/Careline.png" alt=""></div>
@@ -398,7 +395,6 @@
         </div>
     </div>
 </section>
-
 
 <section id="contact">
         <h3>Contact Me</h3>
