--- a/index.html
+++ b/index.html
@@ -53,35 +53,39 @@
         <div class="landing-bottom">
             
             <div class="bottom-audios">
-                <p class="note landing-note">Hello and welcome! I'm Tanya, a voiceover artist from Surrey. 
-                    Check out my reels below to hear some of my previous voiceover works and projects.</p>
-                <div class="audio-item">
-                    <div class="audio-img-container">
-                        <img src="images/Studio/studio4.jpeg" alt="">
-                    </div>
-                    <audio controls src="audio/demos/Tanya_Audiobook.mp3"></audio>
-                    <h5>Audiobook's</h5>
+                <div class="landing-note-container">
+                    <p class="note landing-note">Hello and welcome! I'm Tanya, a voiceover artist from Surrey. 
+                        Check out my reels below to hear some of my previous voiceover works and projects.</p>
                 </div>
-                <div class="audio-item">
-                    <div class="audio-img-container">
-                        <img src="images/Studio/studio3.jpeg" alt="">
+                <div class="audios-container">
+                    <div class="audio-item">
+                        <div class="audio-img-container">
+                            <img src="images/Studio/studio4.jpeg" alt="">
+                        </div>
+                        <audio controls src="audio/demos/Tanya_Audiobook.mp3"></audio>
+                        <h5>Audiobook's</h5>
                     </div>
-                    <audio controls src="audio/demos/Tanya_Commercial.mp3"></audio>
-                    <h5>Commercial Reel</h5>
-                </div>
-                <div class="audio-item">
-                    <div class="audio-img-container">
-                        <img src="images/Studio/studio10.jpeg" alt="">
+                    <div class="audio-item">
+                        <div class="audio-img-container">
+                            <img src="images/Studio/studio3.jpeg" alt="">
+                        </div>
+                        <audio controls src="audio/demos/Tanya_Commercial.mp3"></audio>
+                        <h5>Commercial Reel</h5>
                     </div>
-                    <audio controls src="audio/demos/Tanya_Corp.mp3"></audio>
-                    <h5>Corporate Reel</h5>
-                </div>
-                <div class="audio-item">
-                    <div class="audio-img-container">
-                        <img src="images/Studio/studio2.jpeg" alt="">
+                    <div class="audio-item">
+                        <div class="audio-img-container">
+                            <img src="images/Studio/studio10.jpeg" alt="">
+                        </div>
+                        <audio controls src="audio/demos/Tanya_Corp.mp3"></audio>
+                        <h5>Corporate Reel</h5>
                     </div>
-                    <audio controls src="audio/demos/Tanya_Doc.mp3"></audio>
-                    <h5>Documentary's</h5>
+                    <div class="audio-item">
+                        <div class="audio-img-container">
+                            <img src="images/Studio/studio2.jpeg" alt="">
+                        </div>
+                        <audio controls src="audio/demos/Tanya_Doc.mp3"></audio>
+                        <h5>Documentary's</h5>
+                    </div>
                 </div>
             </div>
 
@@ -139,9 +143,28 @@
                         </div>
                     </div>
                 </div>
+                <div class="youtube-container">
+                  <!---  <h3>Recent work...</h3>    -->
+                  <p class="note youtube-note review-note-two">Recent work</p>
+                    <div class="youtube-video">
+                        <iframe  src="https://www.youtube.com/embed/r1u0yozgjVA" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <div class="youtube-video">
+                        <iframe  src="https://www.youtube.com/embed/h0cHJx4hyXU" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <div class="youtube-video">
+                        <iframe  src="https://www.youtube.com/embed/W3LBCUZVUdM" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <div class="youtube-video">
+                        <iframe  src="https://www.youtube.com/embed/QYKJYTEq33Y" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <div class="youtube-video">
+                        <iframe  src="https://www.youtube.com/embed/khTiA7NuVMk" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
 
-        </div>
+        </div> 
     </div>
 </section>
 
@@ -153,26 +176,6 @@
     </div>
 </section>
 
-<section id="recents">
-    <h3>Recent work...</h3>
-    <div class="youtube-container">
-        <div class="youtube-video">
-            <iframe  src="https://www.youtube.com/embed/r1u0yozgjVA" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="youtube-video">
-            <iframe  src="https://www.youtube.com/embed/h0cHJx4hyXU" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="youtube-video">
-            <iframe  src="https://www.youtube.com/embed/W3LBCUZVUdM" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="youtube-video">
-            <iframe  src="https://www.youtube.com/embed/QYKJYTEq33Y" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="youtube-video">
-            <iframe  src="https://www.youtube.com/embed/khTiA7NuVMk" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </div>
-</section>
 
 <section id="about-me">
     <div class="about-me">
