--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="avatar">
                     <img src="images/Studio/studio1.jpeg" alt="">
                 </div>
-                <a href="">Contact: <span>tanyasemail@gmail.com</span></a>
+                <a href="">Contact: <span>tanyaosullivanvoice@gmail.com</span></a>
             </div>
         </div>
 </section>  
@@ -55,7 +55,7 @@
             <div class="bottom-audios">
                 <div class="landing-note-container">
                     <p class="note landing-note">Hello and welcome! I'm Tanya, a voiceover artist from Surrey. 
-                        Check out my reels below to hear some of my previous voiceover works and projects.</p>
+                        Check out my reels to hear some of my previous voiceover works and projects.</p>
                 </div>
                 <div class="audios-container">
                     <div class="audio-item">
@@ -63,7 +63,7 @@
                             <img src="images/Studio/studio4.jpeg" alt="">
                         </div>
                         <audio controls src="audio/demos/Tanya_Audiobook.mp3"></audio>
-                        <h5>Audiobook's</h5>
+                        <h5>Audiobook Reel</h5>
                     </div>
                     <div class="audio-item">
                         <div class="audio-img-container">
@@ -84,7 +84,7 @@
                             <img src="images/Studio/studio2.jpeg" alt="">
                         </div>
                         <audio controls src="audio/demos/Tanya_Doc.mp3"></audio>
-                        <h5>Documentary's</h5>
+                        <h5>Documentary Reel</h5>
                     </div>
                 </div>
             </div>
