Two new Youtube videos
src links ending in 'loy' (top link) and 'mazeM' are new

--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
                   <!---  <h3>Recent work...</h3>    -->
                   <p class="note youtube-note review-note-two">Recent work</p>
                     <div class="youtube-video">
+                        <iframe  src="https://www.youtube.com/embed/3qjB6GnhloY" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <div class="youtube-video">
                         <iframe  src="https://www.youtube.com/embed/uBcX72akX5Q" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <div class="youtube-video">
@@ -154,6 +157,9 @@
                     </div>
                     <div class="youtube-video">
                         <iframe  src="https://www.youtube.com/embed/h0cHJx4hyXU" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <div class="youtube-video">
+                        <iframe  src="https://www.youtube.com/embed/dlyEroMazeM" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <div class="youtube-video">
                         <iframe  src="https://www.youtube.com/embed/W3LBCUZVUdM" frameborder="0" allowfullscreen></iframe>
